tests/ui/issues/issue-18389.stderr
error[E0445]: private trait `Private<<Self as Public>::P, <Self as Public>::R>` in public interface
  --> $DIR/issue-18389.rs:13:1
   |
LL |   trait Private<P, R> {
   |   ------------------- `Private<<Self as Public>::P, <Self as Public>::R>` declared as private
...
LL | / pub trait Public: Private<
LL | |
LL | |     <Self as Public>::P,
LL | |     <Self as Public>::R
LL | | > {
   | |_^ can't leak private trait

warning: trait `Private<<Self as Public>::P, <Self as Public>::R>` is more private than the item `Public`
   |
note: trait `Public` is reachable at visibility `pub`
  --> $DIR/issue-18389.rs:13:1
   |
LL | / pub trait Public: Private<
LL | |
LL | |     <Self as Public>::P,
LL | |     <Self as Public>::R
LL | | > {
   | |_^
note: but trait `Private<<Self as Public>::P, <Self as Public>::R>` is only usable at visibility `pub(crate)`
  --> $DIR/issue-18389.rs:10:1
   |
LL | trait Private<P, R> {
   | ^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/issue-18389.rs:1:9
   |
LL | #![warn(private_bounds)]
   |         ^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0445`.
